--- a/index.html
+++ b/index.html
@@ -75,14 +75,18 @@
       <section id="about" class="about">
         <div class="container">
           <div class="row">
-            <div class="col-lg-12 pt-4 pt-lg-0 content text-center" data-aos="fade-right">
-              <h3>About SisDec</h3>
-              <p class="fst-italic">This application aims to help users identify whether their skin condition is problematic or not.</p>
-              <ul>
+            <div class="col-lg-12 pt-4 pt-lg-0 content text-center">
+              <h3 data-aos="fade-right">About SisDec</h3>
+              <p class="fst-normal" data-aos="fade-left">
+                Facial skin is the most guarded part of the body, especially for women. Sometimes we don't realize that our face is very sensitive. Damaged and sensitive facial skin is influenced by internal and external factors. So the
+                disease that is on our facial skin varies and the problem is that people often don't know what disease they are suffering from. Here we present a mobile application by utilizing machine learning to classify types of facial
+                skin diseases that can help the public to find out the name of the disease they are suffering from and find out the first action to be taken as well as related health information.
+              </p>
+              <!-- <ul>
                 <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
                 <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
                 <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-              </ul>
+              </ul> -->
             </div>
           </div>
         </div>
@@ -245,20 +249,21 @@
             <ul>
               <li data-aos="fade-up" data-aos="fade-up" data-aos-delay="100">
                 <i class="bx bx-help-circle icon-help"></i>
-                <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Non consectetur a erat nam at lectus urna duis? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1"
+                  >Apakah teknologi machine learning pada aplikasi dapat mengenali jenis penyakit selain 8 jenis yang dicantumkan pada deskripsi? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i
+                ></a>
                 <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
-                  <p>Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.</p>
+                  <p>Tidak. Machine Learning hanya dilatih untuk mengenali jenis penyakit berdasarkan 8 jenis penyakit wajah pada deskripsi aplikasi.</p>
                 </div>
               </li>
 
               <li data-aos="fade-up" data-aos-delay="200">
                 <i class="bx bx-help-circle icon-help"></i>
-                <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">Feugiat scelerisque varius morbi enim nunc? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+                <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed"
+                  >Apakah Machine Learning mampu mengenali dua jenis penyakit dalam 1 gambar? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i
+                ></a>
                 <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
-                  <p>
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper
-                    dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
-                  </p>
+                  <p>Ya. Itu bisa terjadi, namun nilai konfidensinya akan menjadi rendah.</p>
                 </div>
               </li>
 
@@ -309,17 +314,13 @@
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>Get This App</h2>
-            <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste
-              officiis commodi quidem hic quas.
-            </p>
+            <p>You can download the application in the section below.</p>
           </div>
 
           <div class="col-lg-12">
             <div class="info-box mb-4">
               <i class="fa-brands fa-google-play"></i>
               <h3>Click Here</h3>
-              <!-- <p>A108 Adam Street, New York, NY 535022</p> -->
             </div>
           </div>
         </div>
