--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <section id="getthisapp" class="contact section-bg">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
-            <h2>Get This App</h2>
+            <a href="https://drive.google.com/file/d/1hw_3JCTcue1yCxHOAHAkyUegBZicVbAf/view?usp=sharing"><h2>Get This App</h2></a>
             <p>You can download the application in the section below.</p>
           </div>
 
