--- a/index.html
+++ b/index.html
@@ -199,15 +199,15 @@
       <!-- ======= Contact Section ======= -->
       <section id="getthisapp" class="contact section-bg">
         <div class="container" data-aos="fade-up">
-          <div class="section-title">
-            <a href="https://drive.google.com/file/d/1hw_3JCTcue1yCxHOAHAkyUegBZicVbAf/view?usp=sharing"><h2>Get This App</h2></a>
+          <div class="section-title"> 
+            <h2>Get This App</h2>
             <p>You can download the application in the section below.</p>
           </div>
 
-          <div class="col-lg-12">
+          <div class="col-lg-12"><a href="https://drive.google.com/file/d/1hw_3JCTcue1yCxHOAHAkyUegBZicVbAf/view?usp=sharing">
             <div class="info-box mb-4">
               <i class="fa-brands fa-google-play"></i>
-              <h3>Click Here</h3>
+              <h3>Click Here</h3></a>
             </div>
           </div>
         </div>
